crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__innkeepers_talent_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 1312
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 55,
          "end_byte": 147,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "At the beginning of combat on your turn, put a +1/+1 counter on target creature you control."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "Phase",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "PutCounter",
              "counter_type": "P1P1",
              "count": {
                "type": "Fixed",
                "value": 1
              },
              "target": {
                "type": "Typed",
                "type_filters": [
                  "Creature"
                ],
                "controller": "You",
                "properties": []
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": null,
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": "BeginCombat",
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "At the beginning of combat on your turn, put a +1/+1 counter on target creature you control.",
          "constraint": {
            "type": "OnlyDuringYourTurn"
          },
          "condition": null,
          "batched": false
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 148,
          "end_byte": 160,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{G}: Level 2"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 2
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Green"
              ],
              "generic": 0
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{G}: Level 2",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 1
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 161,
          "end_byte": 220,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Permanents you control with counters on them have ward {1}."
      },
      "node": {
        "PreLoweredStatic": {
          "mode": "Continuous",
          "affected": {
            "type": "Typed",
            "type_filters": [
              "Permanent"
            ],
            "controller": "You",
            "properties": [
              {
                "type": "Counters",
                "counters": {
                  "type": "Any"
                },
                "comparator": "GE",
                "count": {
                  "type": "Fixed",
                  "value": 1
                }
              }
            ]
          },
          "modifications": [
            {
              "type": "AddKeyword",
              "keyword": {
                "Ward": {
                  "type": "Mana",
                  "data": {
                    "type": "Cost",
                    "shards": [],
                    "generic": 1
                  }
                }
              }
            }
          ],
          "condition": {
            "type": "ClassLevelGE",
            "level": 2
          },
          "affected_zone": null,
          "effect_zone": null,
          "active_zones": [],
          "characteristic_defining": false,
          "description": "Permanents you control with counters on them have ward {1}."
        }
      }
    },
    {
      "id": 3,
      "source": {
        "id": {
          "item": 3,
          "ordinal": 0
        },
        "span": {
          "first_line": 4,
          "last_line": 4,
          "start_byte": 221,
          "end_byte": 236,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{3}{G}: Level 3"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 3
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Green"
              ],
              "generic": 3
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{3}{G}: Level 3",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 2
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 4,
      "source": {
        "id": {
          "item": 4,
          "ordinal": 0
        },
        "span": {
          "first_line": 5,
          "last_line": 5,
          "start_byte": 237,
          "end_byte": 392,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "If you would put one or more counters on a permanent or player, put twice that many of each of those kinds of counters on that permanent or player instead."
      },
      "node": {
        "PreLoweredReplacement": {
          "event": "AddCounter",
          "execute": null,
          "mode": {
            "type": "Mandatory"
          },
          "valid_card": null,
          "description": "If you would put one or more counters on a permanent or player, put twice that many of each of those kinds of counters on that permanent or player instead.",
          "condition": {
            "type": "ClassLevelGE",
            "level": 3
          },
          "quantity_modification": {
            "type": "Times",
            "factor": 2
          },
          "valid_player": "You",
          "counter_replacement_subject": "Actor"
        }
      }
    }
  ],
  "source_text": "(Gain the next level as a sorcery to add its ability.)\nAt the beginning of combat on your turn, put a +1/+1 counter on target creature you control.\n{G}: Level 2\nPermanents you control with counters on them have ward {1}.\n{3}{G}: Level 3\nIf you would put one or more counters on a permanent or player, put twice that many of each of those kinds of counters on that permanent or player instead.",
  "card_name": "Innkeeper's Talent"
}
